# azure-osconfig

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  firewall.yml  tpm.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  test.yml
baseline/: Cargo.toml  README.md  securitybaseline.yml
baseline/src/: check.rs  lib.rs
baseline_codegen/: Cargo.toml
baseline_codegen/src/: lib.rs
blah/: Cargo.toml
blah/src/: main.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/command/: config.rs  generate.rs  mod.rs  platform.rs
cli/src/command/test/: definition.rs  fixture.rs  log.rs  mod.rs
devops/docker/debian-10-amd64/: Dockerfile
devops/docker/debian-10-arm/: Dockerfile
devops/docker/debian-10-arm64/: Dockerfile
devops/docker/debian-11-amd64/: Dockerfile
devops/docker/debian-11-arm/: Dockerfile
devops/docker/debian-11-arm64/: Dockerfile
devops/docker/debian-9-amd64/: Dockerfile
devops/docker/debian-9-arm/: Dockerfile
devops/docker/debian-9-arm64/: Dockerfile
devops/docker/ubuntu-18.04-amd64/: Dockerfile
devops/docker/ubuntu-18.04-arm/: Dockerfile
devops/docker/ubuntu-18.04-arm64/: Dockerfile
devops/docker/ubuntu-20.04-amd64/: Dockerfile
devops/docker/ubuntu-20.04-arm/: Dockerfile
devops/docker/ubuntu-20.04-arm64/: Dockerfile
docs/: architecture.md  modules.md
examples/commandrunner/: Cargo.toml
examples/commandrunner/src/: command.rs  main.rs
examples/module/: Cargo.toml
examples/module/src/: main copy.rs  main.rs
gpt/: Cargo.toml  schema.json
gpt/src/: client.rs  lib.rs  main.rs
modules/: hostname.yml
modules/baseline/: Cargo.toml
modules/baseline/src/: lib.rs
modules/blah/: Cargo.toml
modules/blah/src/: lib.rs
modules/commandrunner/: Cargo.toml
modules/deviceinfo/: Cargo.toml
modules/hostname/: Cargo.toml
modules/samples/: CMakeLists.txt
modules/securitybaseline/: README.md
osc/: Cargo.toml  README.md
osc/src/: client.rs  config.rs  lib.rs  log.rs  mim.rs
osc/src/module/: bindings.rs  interface.rs  mod.rs  schema.rs  value.rs
osc/src/platform/: mod.rs
osc_codegen/: Cargo.toml  README.md
osc_codegen/src/: lib.rs
osc_codegen/src/common/: diagnostic.rs  mod.rs
osc_codegen/src/common/parse/: attr.rs  mod.rs
osc_codegen/src/osc_component/: attr.rs  derive.rs  mod.rs
osc_codegen/src/osc_module/: attr.rs  mod.rs
osc_codegen/src/osc_object/: attr.rs  mod.rs
platform/: Cargo.toml  Dockerfile  README.md
platform-v2/: Cargo.toml
platform-v2/src/: lib.rs  module.rs
platform/src/: action.rs  bindings.rs  client.rs  controller.rs  lib.rs  main.rs  mmi.rs  module.rs  platform.rs
platform/src/module/: client.rs  mod.rs
src/: CMakeLists.txt  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
src/common/commonutils/: CMakeLists.txt  SocketUtils.c  utils.c  utils.h
src/common/logging/: CMakeLists.txt  log.c  log.h
src/common/rust/: CMakeLists.txt
src/common/rust/core/: Cargo.toml
src/common/rust/core/src/: lib.rs
src/common/rust/osc/: CMakeLists.txt
src/common/rust/osc/src/: lib.rs  log.rs  module.rs
src/common/rust/osc/src/module/: bind.rs
src/common/rust/osc_codegen/: Cargo.toml
src/common/rust/osc_codegen/src/: lib.rs  osc_module.rs
src/common/rust/osc_codegen/src/common/: diagnostic.rs  parse.rs  span_container.rs
src/common/rust/osc_codegen/src/osc_module/: attr.rs  property.rs
src/common/rust/osc_codegen/src/osc_module/attr/: lifetime.rs  version.rs
src/module/: adapter.rs  bindings.rs  meta.rs  mod.rs  sharedlib.rs
src/modules/: CMakeLists.txt
src/modules/hostname-c/src/lib/: CMakeLists.txt  Hostname.c  Hostname.h
src/modules/hostname-c/src/so/: CMakeLists.txt  HostnameModule.c
src/modules/hostname-cpp/src/lib/: CMakeLists.txt  Hostname.cpp  Hostname.h
src/modules/hostname-cpp/src/so/: CMakeLists.txt  HostnameModule.cpp
src/modules/hostname-rust/: CMakeLists.txt  Cargo.toml
src/modules/hostname-rust/src/: lib.rs
src/modules/inc/: Mmi.h
src/modules/samples/blah/: Cargo.toml
src/modules/samples/blah/src/: lib.rs  main.rs  module.rs
src/modules/samples/blah/src/module/: sharedlib.rs
src/modules/samples/rust/: Cargo.toml  out.rs
src/modules/samples/rust/src/: lib copy.rs  lib.rs
src/platform/: CMakeLists.txt  Cargo.toml  build.rs
src/platform/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  module.rs  routes.rs
src/platform/src/module/: sharedlib.rs
temp/: README.md  asc_audits.json  asc_audits.yml  blah.bash  cis_audits.json  common_audits.json  sim.yml  ssh_audits.json
temp/baseline/: Cargo.toml  README.md
temp/baseline/src/: lib.rs
tools/cli/: Cargo.toml
tools/cli/src/: lib.rs  main.rs
tools/cli/src/module/: mod.rs  sharedlib.rs
tools/platform/: Cargo.toml
tools/platform/src/: lib.rs  main.rs
tools/platform/src/module/: mod.rs  sharedlib.rs
