[package]
name = "baseline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
baseline_codegen = { path = "../baseline_codegen" }
log = "0.4.20"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
