[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osc = { path = "../osc" }
clap = { version = "3.0", features = ["derive"] }
dialoguer = { version = "0.10.2"}
confy = "0.4.0"
tokio = { version = "1", features = ["rt"] }
colored = "2.0.0"
colored_json = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
