[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
osc = { path = "../osc" }
clap = { version = "3.0", features = ["derive"] }
colored = "2.0.0"
colored_json = "2.1.0"
confy = "0.4.0"
dialoguer = { version = "0.10.2"}
format_serde_error = "0.3.0"
gag = "1.0.0"
libc = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
stdio-override = "0.1.3"
tempfile = "3.3.0"
