[package]
name = "osc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2.0.0"
format_serde_error = "0.3.0"
hyper = "0.14"
hyperlocal = "0.8"
libc = "0.2"
osc_codegen = { path = "../osc_codegen" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sharedlib = "7.0.0"
tokio = { version = "1", features = ["rt"] }
