[package]
name = "osc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2.0.0"
env_logger = "0.10.0"
format_serde_error = "0.3.0"
hyper = "0.14"
hyperlocal = "0.8"
libc = "0.2"
log = "0.4.17"
osc_codegen = { path = "../osc_codegen" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sharedlib = "7.0.0"
tokio = { version = "1", features = ["rt"] }

[profile.release]
opt-level = 'z'         # Optimize for size
lto = true              # Enable link time optimizations
codegen-units = 1       # Reduce number of codegen units to increase optimization opportunities
panic = 'abort'         # Abort on panics
strip = true            # Strip debug symbols