[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
osc = { path = "../osc" }
anyhow = "1.0.0"
hyper = "0.14"
hyperlocal = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
routerify = "3.0.0"
routerify-unixsocket = "3.0.0"
sharedlib = "7.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }