[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = "0.14.25"
hyperlocal = "0.8.0"
pretty_env_logger = "0.4.0"
osc = { path = "../osc" }
routerify = "3.0.0"
routerify-unixsocket = "3.0.0"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
sharedlib = "7.0.0"
serde_json = "1.0.94"
env_logger = "0.10.0"
log = "0.4.17"
