[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
hyper = "0.14.27"
hyperlocal = "0.8.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
routerify = "3.0.0"
routerify-unixsocket = "3.0.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
