[package]
name = "module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osc = { path = "../../osc"}
hostname = "^0.3"
serde = { version = "1.0", features = ["derive"] }

# NOTE: these are temporary while testing this example
libc = "0.2"
serde_json = "1.0"