[package]
name = "blah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.0"
libc = "0.2.142"
log = "0.4.17"
osc = { path = "../../osc" }
serde = { version = "1.0.160", features = ["derive"] }

[profile.release]
opt-level = 'z'         # Optimize for size
lto = true              # Enable link time optimizations
# codegen-units = 1       # Reduce number of codegen units to increase optimization opportunities
panic = 'abort'         # Abort on panics
strip = true            # Strip debug symbols