[package]
name = "platform"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "osconfig-platform"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
errno = "0.3.3"
libloading = "0.8.0"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["default"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr = "0.1.16"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
trace = "0.1.7"
warp = "0.3.5"

[build-dependencies]
chrono = "0.4.30"

[profile.release]
opt-level = 'z'         # Optimize for size
lto = true              # Enable link time optimizations
codegen-units = 1       # Reduce number of codegen units to increase optimization opportunities
panic = 'abort'         # Abort on panics
strip = true            # Strip debug symbols
