[package]
name = "blah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
errno = "0.3.5"
libloading = "0.8.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = "1.0.189"
serde_json = "1.0.107"
serde_repr = "0.1.16"
thiserror = "1.0.49"
trace = "0.1.7"
