[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust-sample"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.4"
libc = "0.2.147"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
