[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_sample"
crate-type = ["cdylib"]

[dependencies]
osc = { path = "../../../common/rust/osc" }
log = "0.4.20"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
libc = "0.2.149"
ctor = "0.2.5"
anyhow = "1.0.75"
hostname = { version = "0.3.1", features = ["set"] }
